feat: add margin var

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,9 @@
+:root {
+    --jsxc-margin-top: 40px;
+    --jsxc-margin-right: 40px;
+    --jsxc-margin-bottom: 40px;
+    --jsxc-margin-left: 40px;
+}
 .jsxc-window-list,
 .jsxc-window-list-handler,
 .jsxc-dialog,
