--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -11,13 +11,13 @@ body.jsxc-fullscreen {
     z-index: 100;
 
     .jsxc-window-item {
-      bottom: 0;
+      bottom: var(--jsxc-margin-bottom, 40px);
       height: auto;
-      left: 0;
+      left: var(--jsxc-margin-left, 40px);
       margin: 0;
       position: fixed;
-      right: 0;
-      top: 0;
+      right: var(--jsxc-margin-right, 40px);
+      top: var(--jsxc-margin-top, 40px);;
       width: auto;
 
       &.jsxc-minimized {
