fix: Revert "add roster to fit a div"
This reverts commit 94f64b661565aa8dae69cede9bef56b6faaa0678.

--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -2,6 +2,8 @@ body.jsxc-fullscreen {
   overflow: hidden;
 
   #jsxc-roster {
+    border: 0;
+    border-top: 62px solid #2a4163;
     width: 100%;
     z-index: 50;
   }
