feat: add control show menu

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
     --jsxc-margin-right: 40px;
     --jsxc-margin-bottom: 40px;
     --jsxc-margin-left: 40px;
+    --jsxc-show-menu: block;
 }
 .jsxc-window-list,
 .jsxc-window-list-handler,
