--- a/scss/partials/_jsxc.scss
+++ b/scss/partials/_jsxc.scss
@@ -216,3 +216,7 @@ ul.jsxc-vcard {
   margin-right: 0.25em;
   padding: 0.2em 0.5em;
 }
+
+.jsxc-offline {
+  display: var(--jsxc-show-offline-button, flex);
+}
